--- a/index.html
+++ b/index.html
@@ -5,25 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <script src="./index.js" type="module" defer></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link href="style.css" rel="stylesheet" /> 
+
+    <script src="./index.js" type="module" defer></script>
 </head>
 <body>
 
     <div class="container">
         <div class="searchWrapper">
-            <input type="search" placeholder="Search recipes..." id="search">
-            <button>Search</button>
+            <form id="searchForm">
+                <input type="search" placeholder="Search recipes..." id="search">
+                <button id="searchButton" type="submit">Search</button>
+            </form>
         </div>
         <div class="favorites">
+            <h1>Favorites:</h1>
+            <div class="favoritesWrapper">
 
+            </div>
+            <div class="recipeDetails">
+
+            </div>
         </div>
         <div class="recipes">
 
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
+    <br>&nbsp;
     
 </body>
 </html>
